--- a/problema_multicrit.Rmd
+++ b/problema_multicrit.Rmd
@@ -6,7 +6,7 @@ date: 01/12/2023
 ---
 ## TRABAJO 2: PROBLEMA  MULTICRITERIO
 
-ALBERTO HA ACABADO SUS ESTUDIOS UNIVERSITARIOS Y DECIDE EMPEZAR UNAS PRÁCTICAS EXTRACURRICULARES. PPUEDE ELEGIR ENTRE CUATRO GRANDES EMPRESAS, PERO NO SABE POR QUÉ EMPRESA DECIDIRSE. PARA ELLO VA A TENER EN CUENTA DOS CRITERIOS, EL BENEFICIO ECONÓMICO QUE LE APORTA CADA UNA; Y, CON MAYOR PESO, EL NÚMERO DE HORAS QUE VA A TRABAJAR, PUESTO QUE CADA UNA LE PROPORCIONA CONTARTOS DIFERENTES. LAS MATRICES DE COMPARACIÓN POR PARES HAN SIDO ESTIMADAS DE LA SIGUIENTE MANERA:
+ALBERTO HA ACABADO SUS ESTUDIOS UNIVERSITARIOS Y DECIDE EMPEZAR UNAS PRÁCTICAS EXTRACURRICULARES. PUEDE ELEGIR ENTRE CUATRO GRANDES EMPRESAS, PERO NO SABE POR QUÉ EMPRESA DECIDIRSE. PARA ELLO VA A TENER EN CUENTA DOS CRITERIOS, EL BENEFICIO ECONÓMICO QUE LE APORTA CADA UNA; Y, CON MAYOR PESO, EL NÚMERO DE HORAS QUE VA A TRABAJAR, PUESTO QUE CADA UNA LE PROPORCIONA CONTARTOS DIFERENTES. LAS MATRICES DE COMPARACIÓN POR PARES HAN SIDO ESTIMADAS DE LA SIGUIENTE MANERA:
 
 ```{r}
 source("teoriadecision_funciones_multicriterio.R",encoding="UTF-8")
